# yc-companies-scraper

./: README.md  pyproject.toml
src/: main.py  mapping.py  process.py
