[tool.poetry]
name = "ycombinator-companies"
version = "0.1.0"
description = ""
authors = ["Nathan Snellaert <nathan@subsets.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
